added get routes
