# Routes/service.js
@@ -1,8 +1,9 @@
 import express from 'express'
-import { fetchAllTradePersons } from '../Controllers/index.js';
+import { fetchAllTradePersons, fetchByTrades } from '../Controllers/fetch.js';
 
 const router = express.Router();
 
 router.get('/allTradePersons',fetchAllTradePersons);
+router.get('/:trade',fetchByTrades);
 
 export default router;
